# Syui

./: .gitmodules  CMakeLists.txt  TextPS.hlsl  TextVS.hlsl  noto_serif.json
Include/: syui.hpp
src/: batch_renderer.cpp  batch_renderer.hpp  context_manager.cpp  context_manager.hpp  font.cpp  font.hpp  shader.cpp  shader.hpp  syui.cpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp
test_program/: main.cpp
